--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -9,8 +9,13 @@
 
 .Nav a {
   text-decoration: none;
+  color: white;
+}
+
+.Nav a:hover {
+  color: red;
 }
 
 .Nav a:visited {
-  color: white;
+  text-decoration: none;
 }
