Transfered inline styles in jsx to css file

--- a/src/Components/LevelCard/LevelCard.css
+++ b/src/Components/LevelCard/LevelCard.css
@@ -4,6 +4,10 @@
   border-radius: 10px;
   height: 40vh;
   width: 30vh;
+  object-fit: contain;
+  background-size: 90%;
+  background-position: center;
+  background-color: rgb(194, 61, 57);
 }
 
 .LevelCard a {
