--- a/src/Components/DropdownMenu/DropdownMenu.css
+++ b/src/Components/DropdownMenu/DropdownMenu.css
@@ -21,7 +21,15 @@
 }
 
 .DropdownMenu li {
-  margin: 1rem;
+  height: 100%;
+  width: 100%;
+  padding: 1rem;
+  border-radius: 5px;
+}
+
+.DropdownMenu li:hover {
+  background-color: blue;
+  cursor: pointer;
 }
 
 .visible {
