--- a/src/Components/MessageOverlay/MessageOverlay.css
+++ b/src/Components/MessageOverlay/MessageOverlay.css
@@ -1,12 +1,10 @@
 .MessageOverlay {
-  position: fixed;
+  position: absolute;
   display: block;
-  top: 10%;
-  left: 50%;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: #4fbf26;
+  padding: 1rem;
   z-index: 2;
   font-size: 2rem;
-  color: white;
   font-weight: 700;
   border-radius: 10px;
   display: flex;
