--- a/src/Components/Info/Info.css
+++ b/src/Components/Info/Info.css
@@ -4,8 +4,8 @@
   background-color: #010101;
   color: white;
   border-radius: 10px;
-  line-height: 1.5rem;
-  margin: 0 auto 0 auto;
+  line-height: 1.75rem;
+  margin: 10vh auto 0 auto;
 }
 
 .Info h1 {
@@ -18,6 +18,11 @@
   text-underline-offset: 0.3rem;
 }
 
+.Info p,
+.Info li {
+  max-width: 80ch;
+}
+
 .social-svg {
   filter: invert(100%) sepia(0%) saturate(24%) hue-rotate(114deg)
     brightness(108%) contrast(108%);
@@ -27,4 +32,14 @@
   display: block;
   font-style: italic;
   text-align: center;
+}
+
+ul li a {
+  text-decoration: none;
+  color: #4fbf26;
+  font-weight: 700;
+}
+
+ul li a:visited {
+  color: #4fbf26;
 }
